# multilinear-detection-cpp

./: .gitignore  CMakeLists.txt  README.md  constants.cpp  constants.h  galois_field.cpp  galois_field.hpp  graph.cpp  graph.hpp  main.cpp  main_dummy.cpp  main_omp.cpp  main_test.cpp  map_constructor.cpp  map_constructor.hpp  message.hpp  metis_converter.bak  metis_converter.cpp  parallel_ops.cpp  parallel_ops.hpp  polynomial.cpp  polynomial.hpp  polynomials.hpp  recv_vertex_buffer.hpp  test_map_class.cpp  test_map_class.hpp  utils.hpp  vertex.hpp  vertex_buffer.hpp
omp_tests/: omp.haswell.g++  omp.haswell.icpc
resources/: my_little_graph_simple.txt  my_little_template.txt  template.txt
resources/1mil/: README
scripts/: 1ibs.txt  2ibs.txt  config.txt  debug.txt  ibs1more.txt  ibs2more.txt  run_local_100k.sh  run_local_1k.sh  run_local_little.sh  run_local_little_binary.sh  run_main_omp.sh
template/: graph.cpp  graph.h  template_partitioner.h
